@@ -9,6 +9,7 @@
 - added: cache synchronization for cluster (more in docs)
 - added: `F.cluster` (more in docs)
 - added: Total.js `watch` script `require('total.js/watch')` instead of `debug.js` file
+- added: a support for `async` attribute when `<script async src="` tag is generating, e.g. `@{import('async default.js')}`
 
 - updated: `F.http(type, options)` supports `options.listenpath` for HTTP server (a direct shortcut for `default-listenpath`)
 - updated: `F.script` returns error if compilation fails
